[package]
authors = ['TMC']
build = 'build.rs'
description = 'blist node'
edition = '2018'
name = 'blist'
version = '2.0.0'

[[bin]]
name = 'blist'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { version = '2.0.0' }

[dependencies]
#other
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'
jsonrpc-core = '15.0.0'

#dipole
node-template-runtime = { package = 'blist-runtime', version = '2.0.0', path = '../runtime' }

# substrate
frame-benchmarking = { version = '2.0.0' }
frame-benchmarking-cli = { version = '2.0.0' }
pallet-transaction-payment-rpc = { version = '2.0.0' }
sc-basic-authorship = { version = '0.8.0' }
sc-cli = { version = '0.8.0' }
sc-client-api = { version = '2.0.0' }
sc-consensus = { version = '0.8.0' }
sc-consensus-aura = { version = '0.8.0' }
sc-executor = { version = '0.8.0' }
sc-finality-grandpa = { version = '0.8.0' }
sc-network = { version = '0.8.0' }
sc-rpc  = { version = '2.0.0' }
sc-rpc-api  = { version = '0.8.0' }
sc-service = { version = '0.8.0' }
sc-transaction-pool = { version = '2.0.0' }
sp-api = { version = '2.0.0' }
sp-block-builder = { version = '2.0.0' }
sp-blockchain  = { version = '2.0.0' }
sp-consensus = { version = '0.8.0' }
sp-consensus-aura = { version = '0.8.0' }
sp-core = { version = '2.0.0'}
sp-finality-grandpa = { version = '2.0.0' }
sp-inherents = { version = '2.0.0' }
sp-runtime = { version = '2.0.0' }
sp-transaction-pool = { version = '2.0.0' }
substrate-frame-rpc-system = { version = '2.0.0' }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
