[package]
authors = ['TMC']
description = 'pallet-bex'
edition = '2018'
license = 'Unlicense'
name = 'pallet-bex'
version = '2.0.0'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
#other 
byteorder = { version = "1.3.1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }

#substrate
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false  }
sp-runtime = { version = '2.0.0', default-features = false  }
sp-std = { version = '2.0.0', default-features = false  }
sp-io = { version = '2.0.0', default-features = false  }
sp-core = { version = '2.0.0', default-features = false  }
sp-arithmetic = { version = '2.0.0', default-features = false  }
codec = { package = 'parity-scale-codec', features = ['derive'], version = '1.3.0', default-features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default-features = false }
pallet-balances = { version = '2.0.0', default-features = false }

#blist
pallet-token = { path = '../token', default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-core/std'
]
